--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -1,10 +1,47 @@
-<div class='panel panel-primary'>
+<div class='panel panel-primary' *ngIf='product'>
   <div class='panel-heading'>
-    {{pageTitle}}: {{productId}}
+    {{pageTitle}}: {{product.productName}}
   </div>
   <div class='panel-body'>
-    product-detail works! for {{productId}}
+      <div class='row'>
+          <div class='col-md-6'>
+              <div class='row'>
+                  <div class='col-sm-3'>Name:</div>
+                  <div class='col-sm-6'>{{product.productName}}</div>
+              </div>
+              <div class='row'>
+                  <div class='col-sm-3'>Code:</div>
+                  <div class='col-sm-6'>{{product.productCode | lowercase | convertToSpaces: '-'}}</div>
+              </div>
+              <div class='row'>
+                  <div class='col-sm-3'>Description:</div>
+                  <div class='col-sm-6'>{{product.description}}</div>
+              </div>
+              <div class='row'>
+                  <div class='col-sm-3'>Availability:</div>
+                  <div class='col-sm-6'>{{product.releaseDate}}</div>
+              </div>
+              <div class='row'>
+                  <div class='col-sm-3'>Price:</div>
+                  <div class='col-sm-6'>{{product.price|currency:'USD':true}}</div>
+              </div>
+              <div class='row'>
+                  <div class='col-sm-3'>5 Star Rating:</div>
+                  <div class='col-sm-6'>
+                      <pm-star [rating]='product.starRating'>
+                      </pm-star>
+                  </div>
+              </div>
+          </div>
+
+          <div class='col-md-6'>
+              <img class='center-block img-responsive' 
+                   [src]='product.imageUrl'
+                   [title]='product.productName'>
+          </div>
+      </div>
   </div>
+
   <div class='panel-footer'>
     <a class='btn btn-default' style='width: 80px' (click)='onBack()'><i class='glyphicon glyphicon-chevron-left'></i> Back</a>
   </div>
